fixing phone responsiveness, overlapping divs

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p{
 }
 
 h4{
-  margin: 10px;
+  margin-top: 20px;
   font-weight: 300;
 }
 
@@ -157,7 +157,7 @@ select{
 
   .container{
     width: 100%;
-    height: 80%;
+    /* height: 80%; */
     border-radius: 0;
     margin: 0;
   }
@@ -192,13 +192,13 @@ select{
   }
   
   .colour-bar {
-    width: 80%;
+    width: 67%;
     height: 82px;
     
   }
 
   .colour-hex{
-    width: 20%;
+    width: 33%;
     height: 82px;
   }
 
